Build from Base - Dolphin first raw version

--- a/env/build.env
+++ b/env/build.env
@@ -1,2 +1,4 @@
-BUILD_BASE_IMAGE=ghcr.io/games-on-whales/base:edge
-BUILD_BASE_APP_IMAGE=ghcr.io/games-on-whales/base-app:edge
+#BUILD_BASE_IMAGE=ghcr.io/games-on-whales/base:edge
+#BUILD_BASE_APP_IMAGE=ghcr.io/games-on-whales/base-app:edge
+BUILD_BASE_IMAGE=my-gow-base
+BUILD_BASE_APP_IMAGE=my-gow-base-app
