--- a/user.env
+++ b/user.env
@@ -1,6 +1,6 @@
-local_state=./local_state
+local_state=/srv/gow/local_state
 
-TIME_ZONE=Europe/London
+TIME_ZONE=Australia/Melbourne
 
 PUID=1000
 PGID=1000
