--- a/images/mupen64plus/Dockerfile
+++ b/images/mupen64plus/Dockerfile
@@ -1,89 +1,68 @@
-FROM andrewmackrodt/ubuntu-x11-i386
+ARG BASE_APP_IMAGE
 
-USER root
-WORKDIR /root
+# hadolint ignore=DL3006
+FROM ${BASE_APP_IMAGE}
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG REQUIRED_PACKAGES=" \
+    libdbus-1-3 libgtk-3-0 libegl1 libsdl2-2.0-0 \
+    nano \
+    libcanberra-gtk-module \
+    libcanberra-gtk3-module \
+    libgl1-mesa-dri \
+    libgl1-mesa-glx \
+    libnotify-bin \
+    sudo \
+    fuse \
+    libfuse2 \
+    libnss3 \
+    rtkit \
+    pulseaudio \
+	wget \
+	imagemagick \
+	qtbase5-dev \
+	qtchooser \
+	qt5-qmake \
+#    libboost-filesystem=1.71.0 \
+	qtbase5-dev-tools \
+	mupen64plus-qt \
+	apt-utils \
+	libopengl0 \
+	locales \
+	unzip \
+    curl \
+	libnvidia-gl-525 \
+"
 
-# install dependencies
-RUN apt-get update -qq \
- && apt-get install -qqy --no-install-recommends \
-      #python python-pip python-setuptools python-dev \
-      wget \
-      imagemagick \
-      qtbase5-dev \
-      qtchooser \
-      qt5-qmake \
-      qtbase5-dev-tools \
-      mupen64plus-qt \
-      nano \
-      ffmpeg \
-      apt-utils \
-      #libcap2-bin \
-      libopengl0 \
-      locales \
-      unzip \
-      libnvidia-gl-525 \
- && rm -rf /var/lib/apt/lists/*
+RUN apt-get update -y && \
+    apt-get install -y --no-install-recommends software-properties-common && \
+    apt-get install -y --no-install-recommends $REQUIRED_PACKAGES && \
+    # Cleanup \
+    apt-get remove -y software-properties-common && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/*
 
-# add ubuntu user to rtkit to access input devices
-RUN adduser ubuntu rtkit
+#RUN curl -SL https://github.com/dh4/mupen64plus-qt/releases/download/1.15/mupen64plus-qt_linux_1.15.tar.gz | tar -xJC /usr/games
 
+ADD https://github.com/dh4/mupen64plus-qt/releases/download/1.15/mupen64plus-qt_linux_1.15.tar.gz /tmp
+#RUN ls /tmp
 
-# add PCSX2 bin to path
-#RUN ln -s /usr/games/pcsx2 /usr/local/bin/pcsx2
+RUN tar -xpf /tmp/mupen64plus-qt_linux_1.15.tar.gz -C /usr/games --overwrite
 
-# create directories
-RUN for d in /games /data /plugins; do \
-      mkdir "$d"; \
-      chgrp adm "$d"; \
-      chmod 2775 "$d"; \
-    done
+#RUN ln -s /usr/share/games/mupen64plus /data 
+#RUN ln -s /usr/lib/x86_64-linux-gnu/mupen64plus /plugins 
+#RUN ln -s /home/${UNAME}/.config/mupen64plus /config 
 
-#RUN mkdir -p /usr/share/games
-#RUN mkdir -p /usr/lib/x86_64-linux-gnu
-RUN ln -s /usr/share/games/mupen64plus /data 
-RUN ln -s /usr/lib/x86_64-linux-gnu/mupen64plus /plugins 
+WORKDIR $HOME
+USER ${UNAME}
 
-# copy files to container
-COPY mupen64-bootstrap /usr/local/bin/mupen64-bootstrap
+#COPY configs/retroarch.cfg /cfg/retroarch.cfg
+COPY --chmod=777 scripts/startup.sh /opt/gow/startup-app.sh
 
-# stepdown to the ubuntu user
-USER ubuntu
-WORKDIR /home/ubuntu
+ENV XDG_RUNTIME_DIR=/tmp/.X11-unix
 
-# link /data to mupen config
-RUN mkdir -p /home/ubuntu/.config \
- && ln -s /config /home/ubuntu/.config/mupen64plus
+ARG IMAGE_SOURCE
+LABEL org.opencontainers.image.source $IMAGE_SOURCE
 
-# create .local/share for recently-used.xbel
-RUN mkdir -p /home/ubuntu/.local/share
-
-# export volumes
-VOLUME /data
-VOLUME /plugins
-
-# set directories to be chowned on container start
-ENV USER_DIRS /data:/plugins${USER_DIRS:+:$USER_DIRS}
-
-# set the secondary entrypoint
-ENV ENTRYPOINT0 /usr/local/bin/mupen64-bootstrap
-
-################################################################################
-# labels
-################################################################################
-
-ARG LABEL_NAME
-ARG LABEL_VERSION
-ARG LABEL_USAGE
-ARG LABEL_VENDOR
-ARG LABEL_VCS_URL
-ARG LABEL_VCS_REF
-
-LABEL org.label-schema.name="$LABEL_NAME" \
-  org.label-schema.version="$LABEL_VERSION" \
-  org.label-schema.usage="$LABEL_USAGE" \
-  org.label-schema.vendor="$LABEL_VENDOR" \
-  org.label-schema.vcs-url="$LABEL_VCS_URL" \
-  org.label-schema.vcs-ref="$LABEL_VCS_REF" \
-  org.label-schema.schema-version="1.0"
+ENTRYPOINT []
+CMD /opt/gow/startup-app.sh
