--- a/images/dolphin/Dockerfile
+++ b/images/dolphin/Dockerfile
@@ -109,4 +109,5 @@ ENV XDG_RUNTIME_DIR=/tmp/.X11-unix
 ARG IMAGE_SOURCE
 LABEL org.opencontainers.image.source $IMAGE_SOURCE
 
+ENTRYPOINT []
 CMD /opt/gow/startup-app.sh
