--- a/compose/apps/emulationstationde.yml
+++ b/compose/apps/emulationstationde.yml
@@ -1,15 +1,14 @@
 #########################
-# steam-emu.yml
+# emulationstationde.yml
 #########################
 #
-# This container runs Steam
+# This container runs EmulationStastion-DE with several preinstalled emulators
 
 services:
   ####################
-  steam-emu2:
-#    image: ghcr.io/games-on-whales/steam:edge
+  emulationstationde:
     build:
-     context: ./images/steam-emu2
+     context: ./images/emulationstationde
      args:
        BASE_IMAGE: ${BUILD_BASE_IMAGE}
        BASE_APP_IMAGE: ${BUILD_BASE_APP_IMAGE}
@@ -19,38 +18,32 @@ services:
     volumes:
       # Followings are needed in order to get joystick support
       - /dev/input:/dev/input:ro
-      - udev:/run/udev:ro
-      - /etc/localtime:/etc/localtime:ro
+      - udev:/run/udev/:ro
       # Xorg socket in order to get the screen
       - ${XORG_SOCKET}:/tmp/.X11-unix
       # Pulse socket, audio
       - ${PULSE_SOCKET_HOST}:${PULSE_SOCKET_GUEST}
-      # Home directory: client, games, downloads, etc
+      # Home directory: retroarch games, downloads, cores etc
       - ${local_state}/:/home/retro/
-      - /srv/games:/home/retro/games
+      # Emulationstation default roms directory
+      - /srv/games:/home/retro/ROMs/
       - /srv/gow/bios:/bios
-      #- /srv/gow/local_state/.config/mupen64plus/InputAutoCfg.ini:/usr/share/games/mupen64plus/InputAutoCfg.ini
-      # The following is needed by the webview otherwise you'll get Less than
-      # 64MB of free space in temporary directory
-      # (https://github.com/microsoft/vscode/issues/111729#issuecomment-737399692)
+      #- /srv/games:/home/retro/games
+      # some emulators need more than 64 MB of shared memory - see https://github.com/libretro/dolphin/issues/222
       # TODO: why shm_size doesn't work ??????
       - type: tmpfs
         target: /dev/shm
         tmpfs:
-            size: ${SHM_SIZE}
-#    deploy:
-#      resources:
-#        reservations:
-#          devices:
-#          - driver: nvidia
-#            device_ids: ['1']
-#            capabilities: [gpu]
+          size: ${SHM_SIZE}
     ipc: ${SHARED_IPC}  # Needed for MIT-SHM, removing this should cause a performance hit see https://github.com/jessfraz/dockerfiles/issues/359
-
     env_file:
       - config/common.env
       - config/xorg.env
       # run-gow: gpu_env
 
     environment:
-      PROTON_LOG: 1
+      # Which devices does GoW need to be able to use? The docker user will be
+      # added to the groups that own these devices, to help with permissions
+      # issues
+      # These values are the defaults, but you can add others if needed
+      GOW_REQUIRED_DEVICES: /dev/uinput /dev/input/event* /dev/dri/* /dev/snd/*
