--- a/env/headless.env
+++ b/env/headless.env
@@ -14,6 +14,7 @@ XORG_DISPLAY=:99
 XORG_RESOLUTION=1280x720
 XORG_REFRESH_RATE=60
 XORG_DISPLAY_PORT=DP-1-2
+#XORG_DISPLAY_PORT=HDMI-0
 XORG_FORCE_RESOLUTION=false
 
 PULSE_SERVER=unix:/tmp/pulse/pulse-socket
