Add files for headless and and localise

--- a/compose/platforms/headless.yml
+++ b/compose/platforms/headless.yml
@@ -24,6 +24,8 @@ services:
       # The xorg socket, it'll be populated when up and running
       - ${XORG_SOCKET}:/tmp/.X11-unix
       # run-gow: xorg_driver
+      - /srv/gow/edid.txt:/home/retro/edid.txt:ro
+      - /srv/gow/xorg-screen.conf:/usr/share/X11/xorg.conf.d/01-xorg-screen.conf:ro
 
     ipc: ${XORG_IPC} # Needed for MIT-SHM, removing this should cause a performance hit see https://github.com/jessfraz/dockerfiles/issues/359
 
