--- a/env/headless.env
+++ b/env/headless.env
@@ -11,9 +11,9 @@ XORG_SOCKET=xorg
 XORG_DISPLAY=:99
 
 # Change these to suit your preferences
-XORG_RESOLUTION=1920x1080
+XORG_RESOLUTION=1280x720
 XORG_REFRESH_RATE=60
-XORG_DISPLAY_PORT=HDMI-0
+XORG_DISPLAY_PORT=DP-0
 XORG_FORCE_RESOLUTION=false
 
 PULSE_SERVER=unix:/tmp/pulse/pulse-socket
